feat: simplify dashboard sending experience
